2001-03-09  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Generate Makefile for the japanese panel docs.
	
2001-03-07  jacob berkman  <jacob@ximian.com>

	* pixmaps: use some of tigert's nice icons

Tue Mar 06 18:36:33 2001  George Lebl <jirka@5z.com>

	* configure.in, acconfig.h:  Add a with argument for the KDE
	  documentation path

2001-03-02  Christian Schaller <Uraeus@linuxrising.org>
	* Norwegian Nynorsk translation

2001-02-28  Martin Baulig  <baulig@suse.de>

	* configure.in (configure.in): Added applets/gen_util/help/es.

Tue Feb 27 02:15:15 2001  George Lebl <jirka@5z.com>

	* configure.in: give a useful message when the canvas gdkpixbuf
	  thingie isn't found

2001-02-26  Dan Mueth  <dan@eazel.com>

	Include FDL as required by the FDL, and l10n of categories for
	OMF metadata.

	* COPYING-DOCS: Added this file - the FDL
	* Makefile.am: Include COPYING-DOCS
	* applets/fish/help/no/fish_applet-no.omf: l10n of category
	* applets/gen_util/help/no/gen_util_applet-no.omf: l10n of category

2001-02-25  Gediminas Paulauskas <menesis@delfi.lt>

	* configure.in: don't create grdb Makefiles.

2001-02-19  Dan Mueth   <dan@eazel.com>

	* Localized categories in OMF metadata for:
		applets/fish/help/da/fish_applet-da.omf
		applets/gen_util/help/da/clock/clock_applet-da.omf
		applets/gen_util/help/da/mailcheck/mailcheck_applet-da.omf
		applets/gen_util/help/da/printer/printer_applet-da.omf
		gnome-terminal/es/gnome-termainal-es.omf

Sat Feb 17 23:28:01 2001  George Lebl <jirka@5z.com>

	* gnome-core.spec.in:  update so that /var/lib files are installed
	  properly

2001-02-15  Dan Mueth   <dan@eazel.com>

        * omf-install/Makefile.am: Changed to install under
          $(datadir)/omf/ instead of $(prefix)/doc/omf because
          this is The Right Way, and scrollkeeper was recently fixed
          to work this way.

2001-02-14  Christophe Merlet  <redfox@eikonex.org>

	* */*.desktop: Updated French translations.

2001-02-13  Dan Mueth   <dan@eazel.com>
