@@ -24,6 +24,7 @@ EXTRA_DIST = \
 	COPYING-DOCS		\
 	applet-docs.make	\
 	app-docs.make		\
+	sgmldocs.make		\
 	xml-i18n-extract.in	\
 	xml-i18n-merge.in	\
 	xml-i18n-update.in
