@@ -1,3 +1,15 @@
+2001-03-20  Dan Mueth  <dan@eazel.com>
+
+	Update some of the build stuff to the latest state of
+	OMF/SK system.  Plus, added ScrollKeeper stuff into configure.in
+	and added sgmldocs.make so we can start using that to stay
+	uniform with other packages.
+
+	* Makefile.am:
+	* configure.in:
+	* omf-install/Makefile.am:
+	* sgmldocs.make:
+
 2001-03-09  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* configure.in: Generate Makefile for the japanese panel docs.
